--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,13 @@
 .small-num{
   font-size: 20px;
 }
+
+.selected{
+  outline: none;
+  border-color: #9ecaed;
+  box-shadow: 0 0 10px #9ecaed;
+}
+
+.hide{
+  display: none;
+}
